--- a/dashboard/app/views/errors/not_found.html.haml
+++ b/dashboard/app/views/errors/not_found.html.haml
@@ -2,6 +2,6 @@
   %img{:src => "/failure_avatar.png", :style => "float: left;"}
   %h1{style: 'color: #ffa400; font-size: 3em'} 404: Page Not Found
   %p{style: 'font-size: 2em; line-height: 1.5em;'} The page you are looking for doesn't exist at this address. Check the web address and resubmit or go back to our homepage.
-  %ul{style: 'font-size: 1.5em; line-height: 1.5em; min-height: 240px;'}
-    %button{:type => "button"}
+  %ul{style: 'font-size: 1.5em; line-height: 1.5em; min-height: 240px; color:#ffa400'}
+    %button{type: 'button', style: 'color: #0094ca'}
       %a{href: '/courses'} Return Home
