--- a/pegasus/sites.v3/hourofcode.com/views/signup_form.haml
+++ b/pegasus/sites.v3/hourofcode.com/views/signup_form.haml
@@ -19,11 +19,6 @@
         %input#hoc-email.form-control{name: "email_s", placeholder: hoc_s(:signup_email_placeholder), type: "text", required: true}/
 
     .form-group
-      %label.control-label{for: "hoc-organization-name"}= hoc_s(:signup_organization_name_label)
-      %div
-        %input#hoc-organization-name.form-control{name: "organization_name_s", placeholder: hoc_s(:signup_organization_name_placeholder), type: "text", required: true}/
-
-    .form-group
       %label.control-label{for: "hoc-event-type"}= hoc_s(:signup_event_type_label)
       %div
         %select#hoc-event-type.form-control{name: "event_type_s", type: "select", required: true}
@@ -31,10 +26,22 @@
           -['in_school', 'out_of_school'].each do |event_type|
             %option{value: event_type}= hoc_s('signup_event_type_' + event_type)
 
-    .form-group
-      %label.control-label{for: "hoc-event-location"}= hoc_s(:signup_event_location_label)
-      %div
-        %textarea#hoc-event-location.form-control{name: "event_location_s", placeholder: hoc_s(:signup_event_location_placeholder), style: "height: 4em;"}
+    %div#event-location-usa{style: "display: none;"}
+      .form-group
+        %label.control-label{for: "hoc-nces-school"}= hoc_s(:signup_nces_school_label)
+        %div
+          %select#hoc-nces-school.form-control{name: "nces_school_i", type: "select", required: true}
+            %option{value: nil, selected: true}= hoc_s(:signup_nces_school_not_found)
+
+    %div#event-location-any{style: "display: none;"}
+      .form-group
+        %label.control-label{for: "hoc-organization-name"}= hoc_s(:signup_organization_name_label)
+        %div
+          %input#hoc-organization-name.form-control{name: "organization_name_s", placeholder: hoc_s(:signup_organization_name_placeholder), type: "text", required: true}/
+      .form-group
+        %label.control-label{for: "hoc-event-location"}= hoc_s(:signup_event_location_label)
+        %div
+          %textarea#hoc-event-location.form-control{name: "event_location_s", placeholder: hoc_s(:signup_event_location_placeholder), style: "height: 4em;"}
 
     .form-group{style: "display: none;"}
       .checkbox
@@ -72,6 +79,32 @@
   $(document).ready(function() {
     new google.maps.places.SearchBox(document.getElementById('hoc-event-location'));
 
+    $('#hoc-nces-school').selectize({
+      maxItems: 1,
+      load: function(q, callback) {
+        if (!q.length) {
+            return callback();
+        }
+        $.ajax({
+          url: '/dashboardapi/v1/schoolsearch/' + encodeURIComponent(q) + '/40',
+          type: 'GET',
+          error: function() {
+            callback();
+          },
+          success: function(data) {
+            var schools = [];
+            for (var i = 0; i < data.length; i++) {
+              schools.push({
+                value: data[i].id,
+                text: data[i].name + ' - ' + data[i].city + ', ' + data[i].state + ' ' + data[i].zip
+              });
+            }
+            callback(schools);
+          }
+        });
+      }
+    });
+
     $('#hoc-signup-form select').selectize({
       plugins: ['fast_click']
     });
@@ -87,11 +120,16 @@
         $('#hoc-special-event-details').closest('.form-group').slideUp();
       }
     });
+
     $('#hoc-event-type').change(function() {
       if($(this).val() == 'in_school') {
         $('#hoc-entire-school-flag').closest('.form-group').show();
+        $('#event-location-usa').show();
+        $('#event-location-any').hide();
       } else {
         $('#hoc-entire-school-flag').closest('.form-group').hide();
+        $('#event-location-usa').hide();
+        $('#event-location-any').show();
       }
     });
   });
