Census: update map pin colours to green & blue

--- a/pegasus/sites.v3/code.org/views/census_map.haml
+++ b/pegasus/sites.v3/code.org/views/census_map.haml
@@ -50,12 +50,12 @@
       styles: [{
         where: "type CONTAINS 'pledged'",
         markerOptions: {
-          iconName: "ltblu_stars"
+          iconName: "small_green"
         }
       }, {
         where: "type DOES NOT CONTAIN 'pledged'",
         markerOptions: {
-          iconName: "measle_brown"
+          iconName: "small_blue"
         }
       }],
     });
