--- a/dashboard/app/views/layouts/_small_footer.html.haml
+++ b/dashboard/app/views/layouts/_small_footer.html.haml
@@ -1,6 +1,8 @@
 #page-small-footer
 
 :ruby
+  restrict_width = local_assigns[:restrict_width]
+
   reactProps = {
     i18nDropdown: (view_options[:has_i18n] ? URI.encode(i18n_dropdown.to_str) : ''),
     privacyPolicyInBase: true,
@@ -32,7 +34,8 @@
     ],
     copyrightStrings: build_copyright_strings,
     # false because we're not rendering into a phone wireframe here
-    phoneFooter: false
+    phoneFooter: false,
+    restrictWidth: restrict_width
   }
 
 :javascript
