Adding new feature to the error pages in Pegasus

--- a/dashboard/app/views/errors/internal_error.html.haml
+++ b/dashboard/app/views/errors/internal_error.html.haml
@@ -1,4 +1,4 @@
 %header
-  %img{:src => "/failure_avatar.png", :style => "float: left;"}/
-  %h1{:style => "color:#fff;"} 500: Server Error
-  %p{style: 'font-size: 1.5em; line-height: 1.5em;'} Sorry, we're having some technical difficulties. Please try refreshing this page again later. If the problem persists, you can contact us at support@code.org
+  %img{src: '/failure_avatar.png', style: 'float: left'}
+  %h1{style: 'color: #fff; font-size: 2em'} 500: Server Error
+  %p{style: 'font-size: 1.25em; line-height: 1.5em; color: #fff'} Sorry, we're having some technical difficulties. Please try refreshing this page again later. If the problem persists, you can contact us at support@code.org
