update string and legend styling

--- a/pegasus/sites.v3/code.org/views/census_map.haml
+++ b/pegasus/sites.v3/code.org/views/census_map.haml
@@ -6,10 +6,10 @@
   #belowmaplegend.legend
     .legend-title Legend
     .color.blue
-    %div
+    .caption
       Pledged to expand computer science
     .color.green
-    %div
+    .caption
       Goes beyond an Hour of Code
   #map-footer
     %span#footer-text
