--- a/pegasus/sites.v3/code.org/public/css/census_map.css
+++ b/pegasus/sites.v3/code.org/public/css/census_map.css
@@ -41,9 +41,13 @@
   background: #FFF;
   padding: 10px;
   margin: 5px;
-  font-size: 14px;
+  font-size: 12px;
   font-family: Arial, sans-serif;
   width: 160px;
+}
+
+.caption {
+  margin-bottom: 5px;
 }
 
 .legend-title {
