--- a/pegasus/sites.v3/code.org/views/census_map.haml
+++ b/pegasus/sites.v3/code.org/views/census_map.haml
@@ -75,7 +75,7 @@
     legend.index = 1;
     $("#belowmaplegend div").clone().appendTo(legend);
 
-    gmap.controls[google.maps.ControlPosition.RIGHT_BOTTOM].push(legend);
+    gmap.controls[google.maps.ControlPosition.LEFT_BOTTOM].push(legend);
 
     layer.setMap(gmap);
 
