adjustments for mobile

--- a/pegasus/sites.v3/code.org/public/css/census_map.css
+++ b/pegasus/sites.v3/code.org/public/css/census_map.css
@@ -9,12 +9,13 @@
 #map-footer {
   float: right;
   padding-top: 10px;
+  padding-bottom: 20px;
 }
 
 #footer-text {
   font-family: 'Gotham 7r' sans-serif;
   font-size: 20px;
-  margin: 0 25px 0 25px;
+  margin-right: 25px;
 }
 
 .signup-button {
