--- a/dashboard/app/views/errors/not_found.html.haml
+++ b/dashboard/app/views/errors/not_found.html.haml
@@ -1,7 +1,89 @@
-%header
-  %img{:src => "/failure_avatar.png", :style => "float: left;"}
-  %h1{style: 'color: #ffa400; font-size: 3em'} 404: Page Not Found
-  %p{style: 'font-size: 2em; line-height: 1.5em;'} The page you are looking for doesn't exist at this address. Check the web address and resubmit or go back to our homepage.
-  %ul{style: 'font-size: 1.5em; line-height: 1.5em; min-height: 240px; color:#ffa400'}
-    %button{type: 'button', style: 'color: #0094ca'}
-      %a{href: '/courses'} Return Home
+%div{style: 'width: 970px'}
+  %div{style: 'width: 140px; margin-right: 40px; float: left'}
+    &nbsp;
+  %div{style: 'width: 610px; float: left; margin: 0; padding: 0'}
+    %header
+      :css
+        h1 {
+          font-size: 2em;
+          color: #4d575f;
+        }
+
+        p {
+          font-size: 1.25em;
+          line-height: 1.5em;
+          color: #4d575f;
+        }
+      %img{src: '/failure_avatar.png', style: 'float: left'}
+      %h1 404: Page Not Found
+      %p
+        The page you are looking for doesn't exist at this address. Check the web address and resubmit or go back to our homepage.
+    %alter-button-color
+      %body
+        %link{href: '040-page.css', rel: 'styles_min/'}
+        :css
+          .button-color-share {
+            background-color: rgb(126, 92, 162);
+            border-color: rgb(126, 92, 162);
+          }
+
+          button {
+            -webkit-appearance: none;
+            -webkit-user-select: none;
+            -webkit-writing-mode: horizontal-tb;
+            align-items: flex-start;
+            background-color: rgb(255, 164, 0) ;
+            border-color: rgb(255, 164, 0) ;
+            background-image: none;
+            border-bottom-left-radius: 4px;
+            border-bottom-right-radius: 4px;
+            border-bottom-style: solid;
+            border-bottom-width: 1px;
+            border-image-outset: 0px;
+            border-image-repeat: stretch;
+            border-image-slice: 100%;
+            border-image-source: none;
+            border-image-width: 1;
+            border-left-style: solid;
+            border-left-width: 1px;
+            border-right-style: solid;
+            border-right-width: 1px;
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
+            border-top-style: solid;
+            border-top-width: 1px;
+            box-sizing: border-box;
+            color: rgb(255, 255, 255);
+            cursor: pointer;
+            display: inline-block;
+            font-family: 'Gotham 4r', sans-serif;
+            font-size: 14px;
+            font-weight: normal;
+            height: 34px;
+            letter-spacing: normal;
+            line-height: 20px;
+            margin-bottom: 0px;
+            margin-left: 0px;
+            margin-right: 0px;
+            margin-top: 0px;
+            padding-bottom: 6px;
+            padding-left: 12px;
+            padding-right: 12px;
+            padding-top: 6px;
+            text-align: center;
+            text-indent: 0px;
+            text-shadow: none;
+            text-transform: none;
+            vertical-align: middle;
+            white-space: nowrap;
+            word-spacing: 0px;
+            writing-mode: lr-tb;
+          }
+      %a{href: '/', style: 'color: #fff'}
+        %button.orange-button Return home
+  %div{style: 'width: 140px; margin-left: 40px; float: left'}
+    &nbsp;
+%div{id: 'clearboth', style: 'clear:both'}
+%br
+%br
+%br
