--- a/pegasus/sites.v3/code.org/views/404.haml
+++ b/pegasus/sites.v3/code.org/views/404.haml
@@ -3,18 +3,21 @@ title: "404: Page Not Found"
 nav: blank
 rightbar: blank
 ---
-%alter-body-color
-  %head
-    %link{:href => "050-theme.css", :rel => "styles_min/"}
-    :css
-      body{
-        background-color: #e7e8ea !important;
-        height: 100%;
-      }
 %header
+  :css
+    h1 {
+      font-size: 2em;
+      color: #4d575f;
+    }
+
+    p {
+      font-size: 1.25em;
+      line-height: 1.5em;
+      color: #4d575f;
+    }
   %img{src: '/failure_avatar.png', style: 'float: left'}
-  %h1{style: 'color: #4d575f; font-size: 2em'} 404: Page Not Found
-  %p{style: 'font-size: 1.25em; line-height: 1.5em; color: #4d575f'} The page you are looking for doesn't exist at this address. Check the web address and resubmit or go back to our homepage.
-  %ul{style: 'font-size: 1.25em; line-height: 1.5em; min-height: 240px; color:#ffa400'}
-    %button{type: 'button'}
-      %a{href: '/home', style: 'color: #4d575f'} Return Home
+  %h1 404: Page Not Found
+  %p
+    The page you are looking for doesn't exist at this address. Check the web address and resubmit or go back to our homepage.
+    %a{href: '/', style: 'color: #fff'}
+      %button.orange-button Return home
