Update responsive theme to error pages

--- a/dashboard/app/views/errors/internal_error.html.haml
+++ b/dashboard/app/views/errors/internal_error.html.haml
@@ -22,7 +22,7 @@
           %a{href: 'mailto:support@code.org', style: 'font-size: 1.25em'} support@code.org
   %div{style: 'width: 140px; margin-left: 40px; float: left'}
     &nbsp;
-%div{id: 'clearboth', style: 'clear:both'}
+%div{id: 'clearboth', style: 'clear:both; width: 970px'}
 %br
 %br
 %br
