Stop sanitizing some strings in the sign up forms

--- a/dashboard/app/views/devise/registrations/_finish_sign_up.html.haml
+++ b/dashboard/app/views/devise/registrations/_finish_sign_up.html.haml
@@ -34,7 +34,7 @@
         #teacher-name-label{style: "display: none;"}
           = f.label :name, t('activerecord.attributes.user.name').html_safe
         #student-name-label{style: "display: none;"}
-          = f.label :name, t('activerecord.attributes.user.name_example').html_safe
+          = f.label :name, simple_format(h(t('activerecord.attributes.user.name_example')))
         = f.text_field :name, maxlength: 255
       - if @user.errors[:name].present?
         %span.error.padded= @user.errors[:name].join(', ')
