Fix create button margin

--- a/shared/css/header.scss
+++ b/shared/css/header.scss
@@ -125,6 +125,7 @@
     color: $white;
     background-color: transparent;
     border: 2px solid $white;
+    margin-top: -5px;
 
     .pairing_name, .display_name, .create_button {
       font-family: 'Gotham 4r', sans-serif;
