--- a/dashboard/app/views/scripts/_form.html.haml
+++ b/dashboard/app/views/scripts/_form.html.haml
@@ -14,11 +14,10 @@
   - else
     = f.hidden_field :name
   .edit_container
-  - include_stages = params[:beta].present?
   - scriptData = {script: @script ? @script.summarize_for_edit : {},
                   i18n: @script ? @script.summarize_i18n : {},
-                  beta: params[:beta].present?,
-                  levelKeyList: params[:beta] && Level.key_list,
+                  beta: !params[:text].present?,
+                  levelKeyList: Level.key_list,
                   stageLevelData: @script_file,
                   locales: options_for_locale_select,
                   script_families: ScriptConstants::FAMILY_NAMES,
