--- a/dashboard/app/views/scripts/edit.html.haml
+++ b/dashboard/app/views/scripts/edit.html.haml
@@ -4,3 +4,11 @@
 = link_to t('crud.show'), @script
 |
 \#{link_to t('crud.back'), scripts_path}
+|
+- if params[:text]
+  %a{href: '?'}
+    Edit stage gui
+- else
+  %a{href: '?text=1'}
+    Edit stage text
+
