--- a/dashboard/app/views/followers/student_user_new.html.haml
+++ b/dashboard/app/views/followers/student_user_new.html.haml
@@ -80,7 +80,7 @@
             = submit_tag 'Register', class: 'btn btn-primary'
 
         #student-terms
-          != t('signup_form.student_terms')
+          != t('signup_form.student_terms', url: 'http://code.org/privacy', markdown: true)
           %br/
           %br/
           %br/
