--- a/dashboard/app/views/devise/registrations/_old_sign_up_form.html.haml
+++ b/dashboard/app/views/devise/registrations/_old_sign_up_form.html.haml
@@ -148,9 +148,7 @@
     .student-options
       %br/
       %br/
-      *
-      -# Temporarily use student_terms so that existing translations get used.
-      != t('signup_form.student_terms')
+      != t('signup_form.student_terms', url: 'http://code.org/privacy', markdown: true)
 
   .span5{style: "display: flex;"}
     %div.vertical-or
