--- a/dashboard/app/views/zendesk_session/index.html.haml
+++ b/dashboard/app/views/zendesk_session/index.html.haml
@@ -1,4 +1,1 @@
-- if @error == TOO_YOUNG
-  %p!= t('zendesk_too_young_message', support_url: "support.code.org", markdown:true)
-- else if @error == UNVERIFIED_CODEORG
-  %p= t('zendesk_unverified_codeorg_account_message')
+%p!= @error
