Create a new string for the md text

--- a/dashboard/app/views/devise/registrations/_new_sign_up_form.html.haml
+++ b/dashboard/app/views/devise/registrations/_new_sign_up_form.html.haml
@@ -34,4 +34,4 @@
 
 / More information for students about email storage.
 %div{style: "width: 700px;"}
-  != t('signup_form.student_terms', url: 'http://code.org/privacy', markdown: true)
+  != t('signup_form.student_terms_md', url: 'http://code.org/privacy', markdown: true)
