--- a/dashboard/app/views/devise/registrations/_old_sign_up_form.html.haml
+++ b/dashboard/app/views/devise/registrations/_old_sign_up_form.html.haml
@@ -148,7 +148,7 @@
     .student-options
       %br/
       %br/
-      != t('signup_form.student_terms', url: 'http://code.org/privacy', markdown: true)
+      != t('signup_form.student_terms_md', url: 'http://code.org/privacy', markdown: true)
 
   .span5{style: "display: flex;"}
     %div.vertical-or
