--- a/pegasus/sites.v3/code.org/views/high_school_curricula_video.haml
+++ b/pegasus/sites.v3/code.org/views/high_school_curricula_video.haml
@@ -4,7 +4,7 @@
 
 - video_curricula_title = [hoc_s(:curriculum_name_csd), hoc_s(:curriculum_name_csp), hoc_s(:curriculum_name_csa), hoc_s(:curriculum_name_artificial_intelligence), hoc_s(:curriculum_name_maker), hoc_s(:hour_of_code)]
 
-- video_curricula_desc = [hoc_s(:csf_page_top_desc), hoc_s(:csp_page_top_desc), hoc_s(:curriculum_desc_csa),  hoc_s(:ai_hero_desc), hoc_s(:curriculum_desc_maker), hoc_s(:hoc_homepage_what_is_hoc_subhead)]
+- video_curricula_desc = [hoc_s(:csd_page_top_desc), hoc_s(:csp_page_top_desc), hoc_s(:curriculum_desc_csa),  hoc_s(:ai_hero_desc), hoc_s(:curriculum_desc_maker), hoc_s(:hoc_homepage_what_is_hoc_subhead)]
 
 - video_id = ["cs_discoveries", "cs_principles", "ai_intelligence", "courses_maker", "hour_of_code"]
 - video_link = ["/csd", "/csp", "/csa", "/ai", "/maker", "/hourofcode"]
