--- a/shared/css/color.scss
+++ b/shared/css/color.scss
@@ -184,6 +184,7 @@ $neutral_dark: #292F36;
 $google_brand_color: #0F9D58;
 $microsoft_brand_color: #FFB900;
 $facebook_brand_color: #3B5998;
+$clever_brand_color: #1464FF;
 
 // ===----===----===---- Design system colors: ----===----===----===
 
