--- a/apps/src/componentLibrary/textField/textfield.module.scss
+++ b/apps/src/componentLibrary/textField/textfield.module.scss
@@ -15,6 +15,7 @@
     margin-bottom: 0;
     border-radius: 0.25rem;
     border: 1px solid unset;
+    caret-color: $light_primary_500;
 
     &:focus-visible {
       outline: 2px solid $light_primary_500;
@@ -25,13 +26,13 @@
 
   .textFieldHelperSection {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     align-self: stretch;
   }
 }
 
 // TextField colors
-.textField-black, .textField-gray {
+.textField.textField-black, .textField.textField-gray {
   .textFieldLabel {
     color: $light-black;
   }
@@ -39,6 +40,10 @@
   input {
     border-color: $light_black;
     background: $light_white;
+
+    &::placeholder {
+      color: $light_gray_400;
+    }
 
     &:focus-visible {
       border-color: $light_black;
@@ -78,7 +83,7 @@
   }
 }
 
-.textField-gray {
+.textField.textField-gray {
   input {
     border-color: $light_gray_400;
 
@@ -88,7 +93,7 @@
   }
 }
 
-.textField-white {
+.textField.textField-white {
   .textFieldLabel {
     color: $light_white;
   }
@@ -97,6 +102,10 @@
     border-color: $light_white;
     background: $light_black;
     color: $light_white;
+
+    &::placeholder {
+      color: $light_gray_600;
+    }
 
     &:focus-visible {
       border-color: $light_white;
@@ -134,12 +143,20 @@
 
 // TextField sizes
 .textField-l {
-  span {
+  .textFieldLabel {
     @include label-one;
     margin-bottom: 0;
   }
 
+  input {
+    @include body-one;
+    padding: 0.625rem 0.875rem;
+    margin-bottom: 0;
+  }
+
   .textFieldHelperSection {
+    @include body-two;
+    margin-bottom: 0;
     gap: 0.375rem;
   }
 }
@@ -150,29 +167,42 @@
     margin-bottom: 0;
   }
 
+  input {
+    @include body-two;
+    padding: 0.5rem 0.75rem;
+    margin-bottom: 0;
+
+    &::placeholder {
+      color: $light_gray_400;
+    }
+  }
+
   .textFieldHelperSection {
+    @include body-three;
+    margin-bottom: 0;
     gap: 0.375rem;
   }
 }
 
 .textField-s {
-  span {
+  .textFieldLabel {
     @include label-three;
     margin-bottom: 0;
   }
 
-  .textFieldHelperSection {
-    gap: 0.25rem;
-  }
-}
-
-.textField-xs {
-  span {
-    @include label-four;
+  input {
+    @include body-three;
+    padding: 0.3125rem 0.625rem;
     margin-bottom: 0;
+
+    &::placeholder {
+      color: $light_gray_400;
+    }
   }
 
   .textFieldHelperSection {
+    @include body-four;
+    margin-bottom: 0;
     gap: 0.25rem;
   }
 }
