two more sections ready

--- a/pegasus/sites.v3/code.org/public/lms.haml
+++ b/pegasus/sites.v3/code.org/public/lms.haml
@@ -37,6 +37,7 @@ theme: responsive_full_width
   .wrapper
     %h2
       =hoc_s("lms_page.reasoning.heading")
+    = view :"lms/lms_editorial_cards"
 
 %section.quote.bg-neutral-dark
   .wrapper
@@ -52,6 +53,7 @@ theme: responsive_full_width
   .wrapper
     %h2.centered
       =hoc_s("lms_page.get_started.heading")
+    = view :"lms/lms_get_started"
 
 %section
   .wrapper
