use secrets for the form values

--- a/config.yml.erb
+++ b/config.yml.erb
@@ -132,6 +132,10 @@ jotform_forms:
     post201:     90065524560150
     facilitator: 91405279991164
 
+# HubSpot
+hubspot_portal_id:              !Secret
+hubspot_admin_interest_form_id: !Secret
+
 # PagerDuty
 pagerduty_token: !Secret
 
