add max-width styles to fix weird wrapping

--- a/pegasus/sites.v3/code.org/public/music/index.haml
+++ b/pegasus/sites.v3/code.org/public/music/index.haml
@@ -40,7 +40,7 @@ theme: responsive_full_width
     %h2=hoc_s("music_lab.student_projects.heading")
     = view :"music/music_lab_student_projects"
 
-%section.bg-primary-light
+%section.bg-primary-light.aws-career-tours
   .wrapper.flex-container.justify-space-between.align-items-center.wrap.flex-direction-column-tablet.gap-1
     %figure
       %img{src: "/images/avatars/amazon-career-tours.png", alt: hoc_s("music_lab.amazon_future_engineer"), style: "width: 150px"}
