Style boxes and add data

--- a/apps/src/templates/sectionProgressV2/progress-table-v2.module.scss
+++ b/apps/src/templates/sectionProgressV2/progress-table-v2.module.scss
@@ -458,3 +458,8 @@ $level-cell-width: 52;
   padding-right: 12px;
   font-size: 14px;
 }
+
+.lessonDataCellExpanded {
+  display: flex;
+  flex-direction: column;
+}
