--- a/pegasus/sites.v3/code.org/views/lms/lms_get_started.haml
+++ b/pegasus/sites.v3/code.org/views/lms/lms_get_started.haml
@@ -6,6 +6,6 @@
       =hoc_s("lms_page.get_started.top_label")
     %h3=hoc_s("lms_page.get_started.title")
     %p=hoc_s("lms_page.get_started.desc")
-    %a.link-button{href: "https://support.code.org/hc/en-us/articles/23120014459405-Learning-Management-System-LMS-and-Single-Sign-On-SSO-Integrations-and-Support-for-Code-org"}
+    %a.link-button.has-external-link{href: "https://support.code.org/hc/en-us/articles/23120014459405-Learning-Management-System-LMS-and-Single-Sign-On-SSO-Integrations-and-Support-for-Code-org"}
       = hoc_s("lms_page.get_started.call_to_action")
   .clear
