maintain color of code

--- a/apps/src/aiTutor/views/chat-workspace.module.scss
+++ b/apps/src/aiTutor/views/chat-workspace.module.scss
@@ -64,7 +64,7 @@ $default-spacing: 2px;
   pre, code {
     // Color copied for consistency with bootstrap styles auto-applied to SafeMarkdown component
     background-color: #f7f7f9;
-    color: $purple;
+    color: $light_primary_700;
   }
 }
 
