prevent buttons from stretching vertically

--- a/apps/src/aiTutor/views/ai-tutor.module.scss
+++ b/apps/src/aiTutor/views/ai-tutor.module.scss
@@ -159,10 +159,12 @@ button.buttonStyle {
 
 .submitButton {
   margin-bottom: 10px;
+  height: 50px;
 }
 
 .quickActionButton {
   margin-right: 10px;
+  height: 50px;
 }
 
 .textArea {
