--- a/shared/css/hamburger.scss
+++ b/shared/css/hamburger.scss
@@ -1,12 +1,15 @@
 @import 'color.scss';
 @import 'font';
 
+$arrow-size: 1.5rem;
 
 #pageheader-wrapper {
   z-index: 99;
 }
 
 #hamburger {
+  display: inline-block;
+  position: relative;
 
   &.hide-always {
     display: none;
@@ -40,11 +43,6 @@
     display: block;
   }
 
-  display: inline-block;
-  float: right;
-  position: relative;
-  font-size: 14px;
-
   #hamburger-icon {
     cursor: pointer;
     height: 20px;
@@ -53,39 +51,31 @@
   }
 
   #hamburger-contents {
-    font-size: 14px;
+    font-size: 1rem;
     list-style: none;
     margin: 0;
-    padding: 0;
     width: 300px;
     right: 0;
     position: absolute;
     top: 55px;
     background-color: $light_primary_500;
+    max-height: 100vh;
+    overflow-y: auto;
+    border-radius: 4px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, .2);
     // We want the z-index to be greater than the teacher panel, which is currently 1021.
     // Teacher panel z-index is defined in teacher-panel.scss
     z-index: 1022;
-    max-height: 100vh;
-    overflow-y: auto;
-    padding-top: 10px;
-    padding-bottom: 10px;
+
     .item {
-
-
       color: $white;
-      line-height: 20px;
-      padding: 4px;
+      line-height: 1.5;
       text-indent: 0;
       list-style-type: none;
-      border-radius: 2px;
-      padding-bottom: 10px;
-      margin-bottom: 5px;
-      margin-top: 5px;
-      margin-left: 25px;
+      margin-block: 1rem;
+      margin-inline: 1rem;
       display: block;
       float: none;
-
-      max-width: 240px;
       text-overflow: ellipsis;
       white-space: nowrap;
       overflow: hidden;
@@ -93,12 +83,15 @@
       &:last-of-type {
         border-bottom: none;
       }
+
       &::before {
         content: none;
       }
+
       &:last-child {
         margin-right: 0;
       }
+
       a {
         @include main-font-regular;
         color: $white;
@@ -107,39 +100,8 @@
           float:right;
         }
       }
-
-      #about-more {
-        @include main-font-regular;
-        color: $white;
-        text-decoration: none;
-        cursor: pointer;
-      }
-      #educate-more {
-        @include main-font-regular;
-        color: $white;
-        text-decoration: none;
-        cursor: pointer;
-      }
-      #about-down {
-        font-size: 30px;
-        float: right;
-      }
-      #about-up {
-        font-size: 30px;
-        float: right;
-        display: none;
-      }
-      #educate-up {
-        font-size: 30px;
-        float: right;
-        display: none;
-      }
-      #educate-down {
-        font-size: 30px;
-        float: right;
-      }
-
     }
+
     &.hide-responsive-menu {
       display: none;
     }
@@ -147,12 +109,14 @@
     .hide-about {
       display: none;
     }
+
     .hide-educate {
       display: none;
     }
 
     .hamburger-expandable-item {
       cursor: pointer;
+
       .text {
         float: left;
         max-width: 210px;
@@ -163,23 +127,24 @@
           float: right;
         }
       }
-      .arrow-down {
-        font-size: 30px;
-        float: right;
-        margin-top: -7px;
-        html[dir=rtl], .rtl & {
-          float: left;
-        }
 
-      }
+      .arrow-down,
       .arrow-up {
-        font-size: 30px;
+        font-size: $arrow-size;
         float: right;
-        margin-top: -7px;
-        display: none;
+        margin-block-start: -4px;
+
         html[dir=rtl], .rtl & {
           float: left;
         }
+      }
+
+      .arrow-up {
+        display: none;
+      }
+
+      i {
+        width: unset;
       }
     }
 
@@ -190,6 +155,12 @@
         max-width: 220px;
         margin-top: 0px;
       }
+    }
+
+    .divider {
+      height: 1px;
+      background: $light_primary_700;
+      margin: 0.75rem 0;
     }
 
     @media(max-width: 400px) {
@@ -205,26 +176,28 @@
     }
   }
 
-  .divider {
-    height: 10px;
-    background: $dark_teal;
-  }
-
-  @media(max-width: 1010px) {
-    &.show-mobile {
+  @media (min-width: 1024px) and (max-width: 1268px) {
+    &.show-desktop-truncated,
+    .show-desktop-truncated {
       display: block;
     }
+    &.hide-desktop-truncated,
+    .hide-desktop-truncated {
+      display: none;
+    }
+    #hamburger {
+      padding-left: 0;
+    }
+  }
+
+  @media(max-width: 1023px) {
+    &.show-mobile,
     .show-mobile {
       display: block;
     }
-    &.hide-mobile {
-      display: none;
-    }
+    &.hide-mobile,
     .hide-mobile {
       display: none;
-    }
-    #hamburger-contents {
-      font-size: 18px;
     }
     #hamburger {
       padding-left: 0;
@@ -280,11 +253,11 @@
     &.active span {
       background-color: transparent;
       &::before {
-        top: 0;
+        top: -2px;
         transform: rotate(45deg);
       }
       &::after {
-        top: 0;
+        top: -2px;
         transform: rotate(-45deg);
       }
     }
