--- a/dashboard/app/views/lessons/show.html.haml
+++ b/dashboard/app/views/lessons/show.html.haml
@@ -3,7 +3,7 @@
 %link{href: asset_path('css/lessons.css'), rel: 'stylesheet', type: 'text/css'}
 %script{src: webpack_asset_path('js/lessons/show.js'),
         data: {lesson: @lesson_data.to_json, customBlocksConfig: Block.for('GamelabJr').to_json}}
-%script{src: webpack_asset_path('js/blockly.js')}
+%script{src: webpack_asset_path('js/googleblockly.js')}
 %script{src: webpack_asset_path("js/#{js_locale}/blockly_locale.js")}
 
 = render partial: 'shared/emulate_print_media'
