--- a/apps/src/codebridge/FileBrowser/styles/fileBrowser.css
+++ b/apps/src/codebridge/FileBrowser/styles/fileBrowser.css
@@ -28,14 +28,29 @@
 .files-toolbar {
   display: flex;
   justify-content: space-between;
-  font-size: 75%;
+  color: white;
   padding: 5px;
+  background-color: #4f555c;
 }
 
 .file-browser ul li span.button-bar {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
+  flex-direction: column;
   cursor: pointer;
+}
+
+.file-browser ul li span.button-bar span:hover {
+  background-color: #54595e;
+}
+
+.file-browser ul li span.button-bar span {
+  display: grid;
+  grid-template-columns: 15px auto;
+}
+
+.button-bar button {
+  white-space: nowrap;
 }
 
 span.caret-container {
@@ -52,4 +67,13 @@ span.caret-container {
 .file-browser ul li span.label i,
 .file-browser ul li span.button-bar i {
   margin-right: 4px;
+}
+
+li .button-kebab {
+  display: none;
+  height: 13px !important;
+}
+
+li :hover .button-kebab {
+  display: inherit;
 }
