remove channels variable in condition

--- a/pegasus/sites.v3/code.org/views/music/music_lab_student_projects.haml
+++ b/pegasus/sites.v3/code.org/views/music/music_lab_student_projects.haml
@@ -1,7 +1,7 @@
 :ruby
   # FontAwesome icon
   icon_check = "fa-solid fa-check-circle"  
-  embed_src = CDO.studio_url("/musiclab/embed?channels=#{request.params['channels'] || channels}&library=#{request.params['library']}", CDO.default_scheme)
+  embed_src = CDO.studio_url("/musiclab/embed?channels=#{request.params['channels']}&library=#{request.params['library']}", CDO.default_scheme)
   list_items = [hoc_s("music_lab.student_projects.list_create"), hoc_s("music_lab.student_projects.list_artist"),  hoc_s("music_lab.student_projects.list_share")]
 
 .grid-container.gap-2
