jimt/CT-623 - added missing scss color

--- a/apps/src/codebridge/FileBrowser/styles/filebrowser.module.scss
+++ b/apps/src/codebridge/FileBrowser/styles/filebrowser.module.scss
@@ -31,7 +31,7 @@
 }
 
 .file-browser ul li span.button-bar span:hover {
-  background-color: #54595e;
+  background-color: $dimgray;
 }
 
 .file-browser ul li span.button-bar span {
