--- a/dashboard/app/assets/stylesheets/application.scss
+++ b/dashboard/app/assets/stylesheets/application.scss
@@ -4099,9 +4099,50 @@ a {
   }
 }
 
+@keyframes clickable-text-glow {
+  0% {
+    text-shadow: none;
+  }
+  50% {
+    text-shadow: 0 0 1px $realyellow,
+      0 0 2px $realyellow,
+      0 0 3px $realyellow,
+      0 0 4px $realyellow,
+      0 0 5px $realyellow,
+      0 0 6px $realyellow,
+      0 0 7px $realyellow,
+      0 0 8px $realyellow,
+      0 0 9px $realyellow;
+  }
+  100% {
+    text-shadow: none;
+  }
+}
+
 #instructions {
   .clickable-text {
     cursor: pointer;
+    position: relative;
+  }
+
+  .clickable-text {
+    animation: clickable-text-glow 2s ease-in-out;
+  }
+
+  .clickable-text-0 {
+    animation-delay: 1s;
+  }
+  .clickable-text-1 {
+    animation-delay: 2s;
+  }
+  .clickable-text-2 {
+    animation-delay: 3s;
+  }
+  .clickable-text-3 {
+    animation-delay: 4s;
+  }
+  .clickable-text-4 {
+    animation-delay: 5s;
   }
 }
 
