--- a/dashboard/app/assets/stylesheets/application.scss
+++ b/dashboard/app/assets/stylesheets/application.scss
@@ -4099,20 +4099,22 @@ a {
   }
 }
 
-@keyframes clickable-text-glow {
+$clickable-text-glow: 0 0 1px $realyellow,
+  0 0 2px $realyellow,
+  0 0 3px $realyellow,
+  0 0 4px $realyellow,
+  0 0 5px $realyellow,
+  0 0 6px $realyellow,
+  0 0 7px $realyellow,
+  0 0 8px $realyellow,
+  0 0 9px $realyellow;
+
+@keyframes clickable-text-glow-keyframes {
   0% {
     text-shadow: none;
   }
   50% {
-    text-shadow: 0 0 1px $realyellow,
-      0 0 2px $realyellow,
-      0 0 3px $realyellow,
-      0 0 4px $realyellow,
-      0 0 5px $realyellow,
-      0 0 6px $realyellow,
-      0 0 7px $realyellow,
-      0 0 8px $realyellow,
-      0 0 9px $realyellow;
+    text-shadow: $clickable-text-glow;
   }
   100% {
     text-shadow: none;
@@ -4123,10 +4125,11 @@ a {
   .clickable-text {
     cursor: pointer;
     position: relative;
-  }
+    animation: clickable-text-glow-keyframes 2s ease-in-out;
 
-  .clickable-text {
-    animation: clickable-text-glow 2s ease-in-out;
+    &:hover {
+      text-shadow: $clickable-text-glow;
+    }
   }
 
   .clickable-text-0 {
