* use DSCO Buttons in ShareAllowedDialog.jsx (Share Project Dialog)

--- a/dashboard/app/assets/stylesheets/application.scss
+++ b/dashboard/app/assets/stylesheets/application.scss
@@ -1160,6 +1160,10 @@ $default-modal-width: 640px;
     display: block;
   }
 
+  .social-buttons button {
+    margin-right: 16px;
+  }
+
   .social-buttons a {
     display: inline-block;
     background: $purple;
