--- a/shared/css/user-menu.scss
+++ b/shared/css/user-menu.scss
@@ -151,7 +151,7 @@
     }
   }
 
-  @media(max-width: 970px) {
+  @media(max-width: 1023px) {
     &.hide-mobile {
       display: none;
     }
@@ -192,5 +192,9 @@
       height: 70px;
       padding-left: 10px;
     }
+  }
+
+  @media (max-width: 1023px) {
+    display: none !important;
   }
 }
