hide first three items in hamburger

--- a/pegasus/sites.v3/code.org/styles_min/040-page.css
+++ b/pegasus/sites.v3/code.org/styles_min/040-page.css
@@ -611,10 +611,12 @@ nav.main #hamburger #hamburger-icon {
   margin-inline-start: 6px;
 }
 
-/* Show the hamburger on small desktop */
+/* Show the hamburger on small desktop
+  with appropriate links hidden */
 @media (min-width: 1024px) and (max-width: 1268px) {
-  nav.main .left ul li:nth-child(n+4) {
-    display: none;
+  nav.main .left ul li:nth-child(n+4),
+  nav.main #hamburger-contents > div:nth-child(-n+4) {
+    display: none !important;
   }
 
   nav.main #hamburger {
