--- a/pegasus/sites.v3/code.org/public/css/page/lms-styles.scss
+++ b/pegasus/sites.v3/code.org/public/css/page/lms-styles.scss
@@ -1,18 +1,16 @@
-
-section.integrations {
-  .sso-card {
-    h4 {
-      display: unset;
-    }
-
-    img {
-      width: 40px;
-      height: 40px;
-      margin-bottom: 0;
-      margin-right: 1rem;
-    }
-  }
+.divider-margins {
+  margin: 0 auto !important;
 }
+
+section.top {
+  .pad {
+    padding: 1.5rem 1.5rem 0 0;
+  }
+
+  img {
+    width: 90%;
+  }
+} 
 
 section.lms-systems {
   .provider-card {
@@ -25,5 +23,19 @@ section.lms-systems {
       width: 100%;
     }
   }
+}
 
+section.integrations { 
+  .sso-card {
+    h4 {
+      display: unset;
+    }
+
+    img {
+      width: 40px;
+      height: 40px;
+      margin-bottom: 0;
+      margin-right: 1rem;
+    }
+  }
 }
