adding new tags

--- a/pegasus/sites.v3/code.org/public/css/page/lms-styles.scss
+++ b/pegasus/sites.v3/code.org/public/css/page/lms-styles.scss
@@ -19,6 +19,10 @@ section.lms-systems {
       height: 40px;
     }
 
+    .top-right {
+      float: right;
+    }
+
     a {
       width: 100%;
     }
