--- a/pegasus/sites.v3/code.org/public/css/page/lms-styles.scss
+++ b/pegasus/sites.v3/code.org/public/css/page/lms-styles.scss
@@ -1,7 +1,3 @@
-.divider-margins {
-  margin: 0 auto !important;
-}
-
 section.top {
   .pad {
     padding: 1.5rem 1.5rem 0 0;
@@ -12,7 +8,7 @@ section.top {
   }
 } 
 
-section.lms-systems {
+.lms-systems {
   .provider-card {
     img {
       width: 40px;
@@ -29,7 +25,7 @@ section.lms-systems {
   }
 }
 
-section.integrations { 
+.integrations { 
   .sso-card {
     h4 {
       display: unset;
